--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   padding-top: 109px;
 }
 @media (max-width: 991px) {
