--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,25 +7,30 @@
     font-style: normal;
 }
 
-
-
 @font-face {
     font-family: "SST-ARABIC";
-    src: url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.ttf") format("truetype");
+    src: url("../webfonts/sst-arabic/SST-ARABIC-LIGHT.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-LIGHT.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-LIGHT.TTF") format("truetype");
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: "SST-ARABIC";
-    src: url("../webfonts/sst-arabic/SST-ARABIC-BOLD.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-BOLD.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-BOLD.ttf") format("truetype");
+    src: url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.TTF") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "SST-ARABIC";
+    src: url("../webfonts/sst-arabic/SST-ARABIC-BOLD.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-BOLD.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-BOLD.TTF") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: "SST-ARABIC";
-    src: url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.ttf") format("truetype");
+    src: url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.TTF") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
