--- a/css/fonts.css
+++ b/css/fonts.css
@@ -8,30 +8,30 @@
 }
 
 @font-face {
-    font-family: "SST-ARABIC";
-    src: url("../webfonts/sst-arabic/SST-ARABIC-LIGHT.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-LIGHT.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-LIGHT.TTF") format("truetype");
+    font-family: "sst_arabiclight";
+    src: url("../webfonts/sst-arabic/sst_arabiclight.woff2") format("woff2"), url("../webfonts/sst-arabic/sst_arabiclight.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-LIGHT.TTF") format("truetype");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "sst_arabicmedium";
+    src: url("../webfonts/sst-arabic/sst-arabic-medium-webfont.woff2") format("woff2"), url("../webfonts/sst-arabic/sst-arabic-medium-webfont.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.TTF") format("truetype");
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "SST-ARABIC";
-    src: url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-MEDIUM.TTF") format("truetype");
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "SST-ARABIC";
-    src: url("../webfonts/sst-arabic/SST-ARABIC-BOLD.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-BOLD.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-BOLD.TTF") format("truetype");
+    font-family: "sst_arabicbold";
+    src: url("../webfonts/sst-arabic/sst-arabic-bold-webfont.woff2") format("woff2"), url("../webfonts/sst-arabic/sst-arabic-bold-webfont.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-BOLD.TTF") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "SST-ARABIC";
-    src: url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.TTF") format("truetype");
-    font-weight: 700;
+    font-family: "SST-ARABIC-ROMAN";
+    src: url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff") format("woff"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.woff2") format("woff2"), url("../webfonts/sst-arabic/SST-ARABIC-ROMAN.TTF") format("truetype");
+    font-weight: 400;
     font-style: normal;
 }
 
