--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 @media (max-width: 991px) {
   body {
-    padding-top: 79px;
+    padding-top: 55px;
   }
   html[dir="ltr"] .nav-header .big-menu{
     margin-inline-start: 0 !important;
@@ -208,7 +208,7 @@ html[dir="ltr"] .language-anchor{
 /*                          dropdown                            */
 /*top header*/
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -620,10 +620,10 @@ html[dir="rtl"] .open-search {
     z-index: 99;
   }
   .fixed-nav .search-section {
-    position: absolute;
+    position: relative;
     top: -100%;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    transform: translateX(-0%);
     width: 560px;
     z-index: 99;
     transition: all 0.3s ease-in-out;
@@ -1398,12 +1398,12 @@ html[dir="rtl"] .footer-accordion.active:after {
   }
   .search-section{
     width: 94%;
-    position: absolute;
-    margin-inline-start: 0;
+    position: relative;
     margin-inline-end: 0;
-    top: 42px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 1px;
+    left: 0;
+    transform: translateX(0%);
+    margin-inline-start: 10px;
   }
   .navgition {
     display: block;
