--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ html[dir="ltr"] .nav-header .big-menu{
   opacity: 0;
   visibility: hidden;
   width: max-content;
-  min-width: 144px;
+  min-width: 180px;
   max-width: 138px;
   background-color: rgba(28, 37, 51,0.949);
   color: var(--sec-color);
@@ -467,7 +467,7 @@ width: 0;
   display: none;
 }
 .logo-sm img {
-  max-width: 69px;
+  max-width: 216px;
 }
 .nav-header figure {
   margin: 0;
@@ -559,8 +559,8 @@ width: 0;
   color: var(--main-color);
   background-color: transparent;
   border: none;
-  font-size: 14px;
-  padding: 0 20px;
+  font-size: 20px;
+  padding: 0 12px;
   transition: 0.3s;
 }
 .search-button:hover {
@@ -607,9 +607,10 @@ html[dir="rtl"] .open-search {
 }
 @media (max-width: 991px) {
   .search-input{
-    
+   
     height: 32px;
   }
+  
   .search-section::after {
     border-bottom: 1px solid var(--main-color);
   }
@@ -657,7 +658,7 @@ html[dir="rtl"] .open-search {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin-inline-end: 25px;
+  
   color: var(--main-color);
   transition: all 0.3s ease-in-out;
 }
@@ -879,9 +880,12 @@ html[dir="rtl"] .open-search {
   overflow: hidden;
  
 }
+.features-box img{
+  width: 90%;
+}
 .feature-box-extra{
  
-  padding-inline-start: 129px;
+  padding-inline-start: 190px;
  
 }
 .features-word{
@@ -976,7 +980,7 @@ html[dir="rtl"] .open-search {
   transition: all 0.3s ease-in-out;
 }
 .services-span{
- margin-top: 22px;
+ margin-top: 10px;
  width: 100%;
  z-index: 5;
  color: #fff;
@@ -1043,7 +1047,7 @@ html[dir="rtl"] .open-search {
     gap: 20px;
   }
   .services-box{
-    margin-bottom: 25px;
+    margin-bottom: 15px;
   }
   .fot-logo-2{
     position: absolute;
@@ -1223,13 +1227,18 @@ html[dir="rtl"] .nav-foot-li .nav-foot-link:hover {
  
     color: #fff;
     transform: scaleX(-1);
-    padding-inline-end: 12px;
+    padding-inline-end: 0 !important;
+    padding-inline-start: 12px;
+   
 }
 html[dir="ltr"] .phone-icon{
   transform: scaleX(1);
+  padding-inline-start: 0;
+    padding-inline-end: 12px !important;
 }
 .social-link i{
   font-size: 18px;
+  padding-inline-end: 12px;
 }
 
 .copy-flex {
@@ -1366,7 +1375,7 @@ html[dir="rtl"] .footer-accordion.active:after {
     margin-inline-start: 0;
   }
   .nav-header .img-logo img {
-    max-width: 100px;
+    max-width: 150px;
   }
   .logo-sm img {
     max-width: 49px;
